# vtic

./: .gitignore  AGENTS.md  BUILD_PLAN.md  DATA_FLOWS.md  DATA_FLOWS_DETAILED.md  DATA_FLOWS_OPERATIONS.md  DATA_MODELS.md  FEATURES.md  HEARTBEAT.md  IDENTITY.md  IMPLEMENTATION_PLAN.md  MEMORY.md  README.md  REVIEW_ROUND1.md  REVIEW_ROUND2.md  SOUL.md  TODO.md  TOOLS.md  breakdown-agent2.md  breakdown-gh-1.md  breakdown-gh-2.md  breakdown-sh-2-part0.md  data-models-stage1-enums.md  data-models-stage2-ticket.md  data-models-stage3-search.md  data-models-stage4-api.md  data-models-stage5-config.md  data-models-stage6-errors-map.md  openapi.yaml  pyproject.toml  review-agent1.md  review-agent3.md  state.md
tmp/vtic/: .gitignore  BUILD_PLAN.md  CLAUDE.md  CRON_PROMPTS.md  DATA_FLOWS_DETAILED.md  DATA_MODELS.md  EXECUTION_PLAN.md  LICENSE  PRIORITY_REVIEW.md  README.md  audit-final-1.md  audit-final-2.md  audit-final-3.md  breakdown-agent1.md  breakdown-agent3.md  breakdown-agent4.md  breakdown-mh-1.md  breakdown-mh-2.md  breakdown-sh-1.md  breakdown-sh-2-part1.md  breakdown-sh-2-part2.md  breakdown-sh-2.md  data-models-stage1-enums.md  data-models-stage2-ticket.md  data-models-stage3-search.md  data-models-stage4-api.md  data-models-stage6-errors-map.md  openapi-review.md  pyproject.toml  review-agent2.md  vtic.toml  wave3-design.md  wave3-plan.md
tmp/vtic/dashboard/: index.html
tmp/vtic/openapi-stages/: stage2-search.yaml  stage3-bulk.yaml
tmp/vtic/reviews/: fix-blocking-1.md  fix-blocking-2.md  review-8-1.md  review-8-2.md  review-8-3.md  review-8-4.md  review-8-5.md  (+11 more)
(+217 files in other folders)
