[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtic"
version = "0.1.0"
description = "A ticket API system with BM25 search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zvec",
    "fastapi",
    "uvicorn[standard]",
    "typer",
    "pydantic>=2.0",
    "orjson",
    "aiofiles",
    "toml",
    "httpx",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vtic"]

[project.scripts]
vtic = "vtic.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/vtic"]
